--- a/dataanalysis_final.ipynb
+++ b/dataanalysis_final.ipynb
@@ -143,23 +143,23 @@
               ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
               ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
               ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
-              "</style><dl class=dl-inline><dt>2.5%</dt><dd>0.785079115839097</dd><dt>97.5%</dt><dd>1.83994455808886</dd></dl>\n"
+              "</style><dl class=dl-inline><dt>2.5%</dt><dd>0.787455957026454</dd><dt>97.5%</dt><dd>1.83886516406054</dd></dl>\n"
             ],
             "text/latex": [
               "\\begin{description*}\n",
-              "\\item[2.5\\textbackslash{}\\%] 0.785079115839097\n",
-              "\\item[97.5\\textbackslash{}\\%] 1.83994455808886\n",
+              "\\item[2.5\\textbackslash{}\\%] 0.787455957026454\n",
+              "\\item[97.5\\textbackslash{}\\%] 1.83886516406054\n",
               "\\end{description*}\n"
             ],
             "text/markdown": [
               "2.5%\n",
-              ":   0.78507911583909797.5%\n",
-              ":   1.83994455808886\n",
+              ":   0.78745595702645497.5%\n",
+              ":   1.83886516406054\n",
               "\n"
             ],
             "text/plain": [
-              "     2.5%     97.5% \n",
-              "0.7850791 1.8399446 "
+              "    2.5%    97.5% \n",
+              "0.787456 1.838865 "
             ]
           },
           "metadata": {},
@@ -267,10 +267,12 @@
         "\n",
         "Objective: To assess if global compliance with recommended NO<sub>2</sub> is dependent on year.\n",
         "\n",
-        "Method: Chi-squared test  \n",
+        "Method: Chi-squared test[^2]  \n",
         "\n",
         "\n",
-        "[^1]: Jarvis DJ, Adamkiewicz G, Heroux ME, et al. Nitrogen dioxide. In: WHO Guidelines for Indoor Air Quality: Selected Pollutants. Geneva: World Health Organization; 2010. 5. Available from: https://www.ncbi.nlm.nih.gov/books/NBK138707/\n"
+        "[^1]: Jarvis DJ, Adamkiewicz G, Heroux ME, et al. Nitrogen dioxide. In: WHO Guidelines for Indoor Air Quality: Selected Pollutants. Geneva: World Health Organization; 2010. 5. Available from: https://www.ncbi.nlm.nih.gov/books/NBK138707/\n",
+        "[^2]: Chisq.test: Pearson’s chi-squared test for count data. RDocumentation. (n.d.-a).\n",
+        "https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/chisq.test\n"
       ]
     },
     {
