added presentation and github pages

--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -8,6 +8,7 @@
     "title: \"Intra and Inter Regional Analysis of Air Quality Index\"\n",
     "author: \"Sheeba Moghal, Pranav Patil, Tiana Le, Dheeraj Oruganty\"\n",
     "format: revealjs\n",
+    "output-dir: docs\n",
     "---"
    ]
   },
