--- a/Index.ipynb
+++ b/Index.ipynb
@@ -34,7 +34,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Gathering"
+    "##\n",
+    "### Data Gathering"
    ]
   },
   {
@@ -244,14 +245,15 @@
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Cleaning"
+    "##\n",
+    "### Data Cleaning"
    ]
   },
   {
@@ -419,7 +421,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Checking for NA values"
+    "## \n",
+    "### Checking for NA values"
    ]
   },
   {
@@ -982,7 +985,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Does South East Asia Region have more NO<sub>2</sub> emissions than the European Region in 2019?\n",
+    "##\n",
+    "### Does South East Asia Region have more NO<sub>2</sub> emissions than the European Region in 2019?\n",
     "\n",
     "- $H_0$: The NO<sub>2</sub> emissions in the South East Asia Region and European Region are similar.    \n",
     "- $H_1$: The NO<sub>2</sub> emissions in the South East Asia Region is greater than in the European Region.    \n",
@@ -1043,9 +1047,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "## Given that South East Asian has greater NO<sub>2</sub> emissions than Europe, additional testing was performed on France and India. \n",
     "\n",
-    "### Does France have less NO<sub>2</sub> emissions in 2016 than in 2010? \n",
+    "## Does France have less NO<sub>2</sub> emissions in 2016 than in 2010? \n",
     "\n",
     "- Method: Two-sample boostrap test for the ratio of means of NO<sub>2</sub>.\n",
     "\n",
@@ -1109,7 +1114,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculating the estimated bias"
+    "##\n",
+    "### Calculating the estimated bias"
    ]
   },
   {
@@ -1254,6 +1260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# \n",
     "## WHO Nitrogen Dioxide Guidelines\n",
     "\n",
     "- According to the existing WHO air quality guidelines, an annual average indoor nitrogen dioxide guideline of 40 μg/m3 is recommended. In the WHO dataset, a new column was added labeling NO<sub>2</sub> above and within 40 μg/m3[^1]. \n",
@@ -1263,7 +1270,7 @@
     "- Method: Chi-squared test  \n",
     "\n",
     "\n",
-    "[^1]: Jarvis DJ, Adamkiewicz G, Heroux ME, et al. Nitrogen dioxide. In: WHO Guidelines for Indoor Air Quality: Selected Pollutants. Geneva: World Health Organization; 2010. 5. Available from: https://www.ncbi.nlm.nih.gov/books/NBK138707/\n"
+    "- [^1]: Jarvis DJ, Adamkiewicz G, Heroux ME, et al. Nitrogen dioxide. In: WHO Guidelines for Indoor Air Quality: Selected Pollutants. Geneva: World Health Organization; 2010. 5. Available from: https://www.ncbi.nlm.nih.gov/books/NBK138707/\n"
    ]
   },
   {
